# MQTT-Rustico

./: .gitignore  README.md
client/: Cargo.toml  Makefile
client/src/: interface.glade  interface.rs  main.rs  packet.rs  paquete.rs  publish_interface.rs  subscription_interface.rs  utils.rs
server/: Cargo.toml  logfile.txt
server/src/: client.rs  cliente.rs  config.txt  configuracion.rs  configuration.rs  coordinator.rs  main.rs  packet.rs  paquete.rs  server.rs  stacked_messages.rs  users.txt  utils.rs  wildcard.rs
server/src/testingConfigs/: cfg.txt  cfga.txt  cfgb.txt  cfgc.txt  cfgd.txt  cfge.txt  cfgf.txt  cfgg.txt  cfgh.txt  cfgi.txt  cfgj.txt  cfgk.txt  cfgl.txt  cfgm.txt  cfgn.txt
