[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "paquete"
path = "src/paquete.rs"

[[bin]]
name = "configuracion"
path = "src/configuracion.rs"